# genesis-agi

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVLOG.md  README.md  bootstrap.py
config/: brain.toml  node_a_sensory.toml  node_b_motor.toml  ping_pong_brain.toml  simulation.toml
config/_template/: _blank_blueprints.toml  _blank_io.toml  anatomy.toml  blueprints.toml  io.toml
docs/: project_structure.md
docs/specs/: 010_ide.md  02_configuration.md  03_neuron_model.md  04_connectivity.md  05_signal_physics.md  06_distributed.md  07_gpu_runtime.md  08_io_matrix.md
examples/cartpole/: cartpole_client.py  readme.md
genesis-baker/: Cargo.toml
genesis-baker/src/: lib.rs  main.rs
genesis-compute/src/: ffi.rs  memory.rs  mock_ffi.rs
genesis-core/: Cargo.toml
genesis-core/src/: config.rs  constants.rs  coords.rs  (+7 more)
genesis-runtime/: Cargo.toml  build.rs
genesis-runtime/cuda/: apply_spike_batch.cu  bindings.cu  inject_inputs.cu  physics.cu  readout.cu
genesis-runtime/examples/: blueprints.toml  shard_00.toml  simulation.toml
genesis-runtime/src/: config.rs  ffi.rs  ipc.rs  lib.rs  main.rs  memory.rs  mock_ffi.rs  output.rs  sentinel.rs  simple_reporter.rs  zone_runtime.rs
genesis-runtime/src/network/: bsp.rs  external.rs  mod.rs  ring_buffer.rs  router.rs  slow_path.rs  socket.rs  test_intra_gpu.rs
genesis-runtime/src/orchestrator/: day_phase.rs  mod.rs  night_phase.rs
genesis-runtime/tests/: cuda_kernels.rs  ipc_e2e_test.sh  mock.rs  network.rs
scripts/: ant_v4_client.py  brain_debugger.py  e2e_benchmark.py  ping_pong_client.py  visualize_ghosts.py
(+67 files in other folders)
