[package]
name = "genesis-runtime"
description = "Day/Night cycle orchestrator and CUDA kernel runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
genesis-core = { workspace = true }
genesis-baker = { path = "../genesis-baker" }
anyhow = "1"
tokio = { version = "1.49.0", features = ["full"] }
bytemuck = { version = "1.25.0", features = ["derive"] }

[build-dependencies]
cc = "1.0"
